# Prosecutions

./: .gitignore  .replit  API_TESTS.md  README.md  SECURITY.md  USAGE.md  VSCODE_SETUP.md  pyproject.toml  replit.md  requirements.txt  start.bat  start.sh
app/: main.py
app/core/: __init__.py  battery_test.py  cpu_test.py  disk_test.py  gpu_test.py  network_test.py  peripherals_test.py  ram_test.py  system_scanner.py
app/models/: __init__.py  scan_result.py  subscription.py
app/routes/: __init__.py  scan.py  subscription.py
app/utils/: __init__.py  database.py  json_exporter.py  pdf_generator.py
attached_assets/: Description_my_project_1761267014638.md
ui/: app.py
ui/static/css/: style.css
ui/static/js/: main.js
ui/templates/: admin.html  base.html  index.html
